--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -81,7 +81,7 @@
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.caprini!=''">{{d.caprini}}</span>
   					<span class="right orange sl8" ms-if="d.rapt!=''">{{d.rapt}}</span>
-  					<span class="right orange sl8" ms-if="d.caprini == ''&& d.rapt==''">极高危</span>
+  					<span class="right orange sl8" ms-if="d.caprini == ''&& d.rapt==''">无评分</span>
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
@@ -89,7 +89,7 @@
   			  		<span>膝关节HSS评分 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
-  					<span class="right orange sl8" ms-if="!d.hss">86</span>
+  					<span class="right orange sl8" ms-if="!d.hss">点击填写</span>
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
