--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -43,7 +43,7 @@
 		  <li class="list-group-item my-collapse">
 		  	<a href="#operate_type"  data-toggle="collapse" >
 			  	<span>手术类型</span>
-			  	<span class="right detail" class="" >创伤手术</span>
+			  	<span class="right detail" class="" >{{d.operate_type}}</span>
 		  	 	<input type="hidden" class="detailInput" value="" ms-duplex-string="d.operate_type">
 		  	</a>
 		  	<div id="operate_type" class="panel-collapse collapse text-center" role="tabpanel" >
