--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -82,11 +82,11 @@
 		  </li>
 		  <li class="list-group-item gray">
 		  	<span>入院日期</span>
-		  	<span class="right">{{d.in_day}}</span>
+		  	<span class="right" ms-if="d.in_day !='1970-01-01'">{{d.in_day}}</span>
 		  </li>
 		  <li class="list-group-item">
 		  	<span>出院日期</span>
-		  	<span class="right">{{d.out_day}}</span>
+		  	<span class="right" ms-if="d.out_day !='1970-01-01'">{{d.out_day}}</span>
 		  </li>
 		</ul>
 		
