--- a/node/public/gakf/register.html
+++ b/node/public/gakf/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=no"/>
 	<title>病人注册</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
@@ -54,15 +54,15 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<select  class="form-control my-input" id="area" name="area" ms-change="change($event)">
-					<option value = "" >选择病区</option>
-					<option ms-repeat-el="d.area" ms-attr-value="{{el}}">{{el}}</option>
-				</select>
-			</div>
-			<div class="form-group">
 				<select  class="form-control my-input" id="room" name="room" ms-change="change($event)">
 					<option value = "" >选择科室</option>
 					<option ms-repeat-el="d.room" ms-attr-value="{{el}}">{{el}}</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<select  class="form-control my-input" id="area" name="area" ms-change="change($event)">
+					<option value = "" >选择病区</option>
+					<option ms-repeat-el="d.area" ms-attr-value="{{el}}">{{el}}</option>
 				</select>
 			</div>
 			<div class="form-group">
@@ -115,8 +115,8 @@
 									dataType: "json", 
 									success: function(obj){
 									 list = obj.content; 
-
-					          		 getValue("name",name,"area");
+									 vmodel.d.room = []; 
+					          		 getValue("name",name,"room");
 									},
 									error:function(){
 
@@ -124,13 +124,13 @@
 								});
 
 				          	 }
-				          	 if(id == "area"){
-				          	 	 vmodel.d.room = []; 
-				          		 getValue("area",name,"room");
-				          	 }
 				          	 if(id == "room"){
+				          	 	 vmodel.d.area = []; 
+				          		 getValue("room",name,"area");
+				          	 }
+				          	 if(id == "area"){
 				          	 	 vmodel.d.doctor = []; 
-				          		 getDoctor("room",name,"doctor",["doctor_name","doctor_id"]);
+				          		 getDoctor("area",name,"doctor",["doctor_name","doctor_id"]);
 				          	 } 
 				          }
 				    });
@@ -144,7 +144,16 @@
 				function getValue (name,value,key){
 					for(var i=0;i<list.length;i++){
 	          		 	if(list[i][name] == value){
-	          		 		vmodel.d[key].push(list[i][key]);
+	          		 		var li = vmodel.d[key];
+	          		 		if(li.length>0){
+	          		 			for(var j=0;j<li.length;j++){
+	          		 				if(li[j] != list[i][key]){
+	          		 					li.push(list[i][key]);
+	          		 				}
+	          		 			}
+	          		 		}else{
+	          		 			vmodel.d[key].push(list[i][key]);
+	          		 		}
 	          		 	}
 	          		 }
 				};
