--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -159,7 +159,10 @@
 	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom" ms-visible="d.isvisible" ms-if="d.isout">
 	  <div class="container text-center" style="height: 42px; line-height: 42px;">
 	    <div class="row">
-	    	<div class="col-xs-12">
+	    	<div class="col-xs-6">
+			    <span style="color:#fff;" ms-click="save">保存</span>
+	    	</div>
+	    	<div class="col-xs-6">
 	    		<a ms-href="/gakf/flow.html?sick_id={{d.id}}&doctor_id={{d.doctor_id}}&isout={{d.isout}}&iso={{d.iso}}">
 			    	<span style="color:#fff;">随访</span>
 			    </a>
@@ -262,8 +265,13 @@
 								dataType: "json", 
 								success: function(obj){
 									var d = obj.content;
-									
 									vmodel.d = $.extend(vmodel.d.$model,d);
+									if(vmodel.d.in_day == '1970-01-01'){
+										vmodel.d.in_day ="";
+									}
+									if(vmodel.d.out_day == '1970-01-01'){
+										vmodel.d.out_day ="";
+									}
 					    		},
 					    		error:function(){
 
